added paging for clinics and doctors